# python_crm

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
src/app/application/config/: config.py  logging.py
src/app/domain/models/sales_department/: __init__.py  manager_group.py  sales_department.py
src/app/domain/models/subscription/: subscription.py
src/app/domain/models/tasks/: manager_task.py
src/app/domain/models/technical_support/: chat.py  ticket.py
src/app/domain/models/users/: admin.py  client.py  manager.py  supervisor.py
src/app/infrastructure/database/: base.py  database.py
src/app/infrastructure/database/interfaces/repositories/: sqlaclhemy_gateway.py
src/app/infrastructure/database/interfaces/uow/: uow.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/migrations/versions/: 2023_12_15_1445-0f4002498769_init.py  2024_01_08_0133-5343deb2f217_add_product.py
src/app/infrastructure/database/models/: __init__.py
src/app/infrastructure/database/models/auth/: tokens.json
src/app/infrastructure/database/models/products/: product.py
src/app/infrastructure/database/models/tasks/: manager_task.py
src/app/infrastructure/db/migrations/: env.py
src/app/main/: main.py
src/app/main/config/: logging.py
src/app/main/di/dependencies/: init_dependencies.py  stub.py
src/app/main/exceptions/: setup_exception_handlers.py
src/app/presentators/api/: root_router.py
src/app/presentators/api/v1/: router.py
tests/: conftest.py  test_ping.py
(+37 files in other folders)
